# LinearAlgebra

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
examples/: simple_examples.cpp  vector_examples.cpp
include/: LinearAlgebra.hpp  Matrix.hpp  Utility.hpp  Vector.hpp
src/: Matrix.tpp  Vector.tpp
tests/MatrixTests/: BaseMatrixFixture.hpp  test_matrix_basics.cpp  test_matrix_operations.cpp  test_matrix_properties.cpp  test_system_operations.cpp
tests/VectorTests/: BaseVectorFixture.hpp  test_vector_basics.cpp  test_vector_operations.cpp
